added local css file to links.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" src="./assets/css/style.css" />
 
     <title>Team Project 1</title>
   </head>
