--- a/index.html
+++ b/index.html
@@ -12,6 +12,39 @@
 </head>
 
 <body>
+
+    <nav class="navbar bg-light">
+        <div class="container-fluid justify-content-center">
+            <form class="d-flex col-6" role="search">
+                <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">Genre 1</option>
+          <option value="2">Genre 2</option>
+          <option value="3">Genre 3</option>
+          <option value="4">Genre 4</option>
+          <option value="5">Genre 5</option>
+        </select>
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
