--- a/index.html
+++ b/index.html
@@ -69,7 +69,19 @@
 
         <!-- kamary -->
 
-
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Movie title</h5>
+                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
