--- a/index.html
+++ b/index.html
@@ -5,87 +5,160 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" src="./assets/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Team Project 1</title>
 </head>
 
 <body>
-
     <nav class="navbar bg-light">
         <div class="container-fluid justify-content-center">
             <form class="d-flex col-6" role="search">
                 <select class="form-select" aria-label="Default select example">
-          <option selected>Open this select menu</option>
-          <option value="1">Genre 1</option>
-          <option value="2">Genre 2</option>
-          <option value="3">Genre 3</option>
-          <option value="4">Genre 4</option>
-          <option value="5">Genre 5</option>
-        </select>
+                    <option selected>Open this select menu</option>
+                    <option value="1">Genre 1</option>
+                    <option value="2">Genre 2</option>
+                    <option value="3">Genre 3</option>
+                    <option value="4">Genre 4</option>
+                    <option value="5">Genre 5</option>
+                </select>
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </nav>
     <main>
-        <!-- trystan -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- kamary -->
-
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+        <section id="cardholder">
+            <div class="container-fluid pt-5">
+                <div class="d-flex justify-content-center py-3">
+                    <div class="row row-cols-3 g-0 gap-3">
+                        <!-- card 1 | documentation: https://getbootstrap.com/docs/5.2/components/card/#example -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 2 -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 3 -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Movie title</h5>
-                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                <div class="d-flex justify-content-center pb-5">
+                    <div class="row row-cols-3 g-0 gap-3">
+                        <!-- card 4 -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 5 -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- card 6 -->
+                        <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="" class="rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Movie title</h5>
+                                        <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur
+                                            adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda
+                                            ducimus, suscipit exercitationem eius iusto?</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- kamary -->
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
 
 
 
@@ -122,7 +195,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 
 
