--- a/index.html
+++ b/index.html
@@ -27,155 +27,93 @@
         </div>
     </nav>
     <main>
-        <<<<<<< HEAD=======>>>>>>> main
-            <section id="cardholder">
-                <div class="container-fluid pt-5">
-                    <div class="d-flex justify-content-center py-3">
-                        <div class="row row-cols-3 g-0 gap-3">
-                            <!-- card 1 | documentation: https://getbootstrap.com/docs/5.2/components/card/#example -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- card 2 -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- card 3 -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+        <!-- card 1 -->
+        <section id="cardholder" class="row">
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
                     </div>
-                    <div class="d-flex justify-content-center pb-5">
-                        <div class="row row-cols-3 g-0 gap-3">
-                            <!-- card 4 -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- card 5 -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- card 6 -->
-                            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
-                                <div class="row g-0">
-                                    <div class="col-md-4">
-                                        <img src="" class="rounded-start" alt="...">
-                                    </div>
-                                    <div class="col-md-8">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Movie title</h5>
-                                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <<<<<<< HEAD=======>>>>>>> main
-                            </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+            <!-- card 2 -->
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- card 3 -->
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- card 4 -->
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- card 5 -->
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- card 6 -->
+            <div class="card justify-content-center" style="min-height: 285px; width:575px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" class="rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Movie title</h5>
+                            <p class="card-text">Movie Description Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam ipsa sapiente velit aliquam aliquid assumenda ducimus, suscipit exercitationem eius iusto?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-            <<<<<<< HEAD <!-- kamary -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                ======= >>>>>>> main
 
 
 
