--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         </div>
     </nav>
     <main>
+
+
+        <section id="intro-page">
+
+            <h2>Welcome to Our Movie Finder!</h2>
+            <h3>Pick a genre to find a movie and watch the trailer!</h3>
+        </section>
         <!-- card 1 -->
         <section id="cardholder" class="row">
             <div class="card justify-content-center" style="min-height: 285px; width:575px;">
