centered some elements, and added padding to the search bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar bg-light">
+    <nav class="navbar bg-light pt-3">
         <div class="container-fluid justify-content-center">
             <form class="d-flex col-6" role="search">
                 <select class="form-select" aria-label="Default select example">
@@ -29,13 +29,13 @@
     <main>
 
 
-        <section id="intro-page">
+        <section class="text-center py-3" id="intro-page">
 
             <h2>Welcome to Our Movie Finder!</h2>
             <h3>Pick a genre to find a movie and watch the trailer!</h3>
         </section>
         <!-- card 1 -->
-        <section id="cardholder" class="row">
+        <section id="cardholder" class="row justify-content-center gap-3">
             <div class="card justify-content-center" style="min-height: 285px; width:575px;">
                 <div class="row g-0">
                     <div class="col-md-4">
