--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             aria-label="Default select example"
           >
             <option selected>Please select your movie genre!</option>
-            <option value="com">Comedy</option>
-            <option value="hor">Horror</option>
-            <option value="rom">Romance</option>
-            <option value="act">Action</option>
-            <option value="sci">Sci-fi</option>
+            <option value="comedy">Comedy</option>
+            <option value="horror">Horror</option>
+            <option value="romance">Romance</option>
+            <option value="acttion">Action</option>
+            <option value="sci_fi">Sci-fi</option>
           </select>
           <button
             class="btn btn-outline-success"
