--- a/index.html
+++ b/index.html
@@ -180,20 +180,11 @@
           </div>
         </div>
       </section>
-      <!-- Button trigger modal -->
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Launch demo modal
-      </button>
 
       <!-- Modal -->
       <div
         class="modal fade"
-        id="exampleModal"
+        id="videoModal"
         tabindex="-1"
         aria-labelledby="exampleModalLabel"
         aria-hidden="true"
@@ -201,7 +192,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Movie Trailer</h5>
               <button
                 type="button"
                 class="btn-close"
@@ -209,19 +200,15 @@
                 aria-label="Close"
               ></button>
             </div>
-            <div class="modal-body">...</div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
+            <div class="modal-body">
+              <iframe
+                width="400"
+                height="300"
+                frameborder="0"
+                allowfullscreen=""
+              ></iframe>
             </div>
+            <div class="modal-footer"></div>
           </div>
         </div>
       </div>
