added a function to adjust the text in the h2 and h3 elements of the intro page when the genre is selected.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     </nav>
     <main>
       <section class="text-center py-3" id="intro-page">
-        <h2>Welcome to Our Movie Finder!</h2>
-        <h3>Pick a genre to find a movie and watch the trailer!</h3>
+        <h2 id="h2El">Welcome to Our Movie Finder!</h2>
+        <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
       </section>
       <!-- card 1 -->
       <section id="cardholder" class="row justify-content-center gap-3">
@@ -202,11 +202,15 @@
             </div>
             <div class="modal-body">
               <iframe
-                width="400"
-                height="300"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+                title="YouTube video player"
                 frameborder="0"
-                allowfullscreen=""
-              ></iframe>
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe
+              >;
             </div>
             <div class="modal-footer"></div>
           </div>
