--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <nav class="navbar bg-light pt-3">
-      <div class="container-fluid justify-content-center">
+      <div class="container-fluid justify-content-center w-75">
         <form class="d-flex col-6" role="search">
           <select
             class="form-select"
@@ -38,7 +38,7 @@
             <option value="sci_fi">Sci-fi</option>
           </select>
           <button
-            class="btn btn-outline-success"
+            class="btn btn-outline-success mx-2"
             id="submitButton"
             type="submit"
           >
@@ -189,7 +189,7 @@
         aria-labelledby="exampleModalLabel"
         aria-hidden="true"
       >
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Movie Trailer</h5>
@@ -210,7 +210,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe
-              >;
+              >
             </div>
             <div class="modal-footer"></div>
           </div>
