added IDs to select menu options

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <form class="d-flex col-6" role="search">
                 <select class="form-select" id="genrePicker" aria-label="Default select example">
             <option selected>Please select your movie genre!</option>
-            <option value="comedy">Comedy</option>
-            <option value="horror">Horror</option>
-            <option value="romance">Romance</option>
-            <option value="acttion">Action</option>
-            <option value="sci_fi">Sci-fi</option>
+            <option value="comedy" id="comedy">Comedy</option>
+            <option value="horror" id="horror">Horror</option>
+            <option value="romance" id="romance">Romance</option>
+            <option value="action" id="action">Action</option>
+            <option value="sci_fi" id="scifi">Sci-fi</option>
           </select>
                 <button class="btn btn-outline-danger mx-2" id="submitButton" type="submit">
             Search
