--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
 <body>
     <nav class="navbar bg-dark pt-3">
         <div class="container-fluid justify-content-center w-75">
-            <form class="d-flex col-6" role="search">
+            <form class="d-flex col-6" role="search" id="btn-submit">
                 <select class="form-select" id="genrePicker" aria-label="Default select example">
             <option selected>Please select your movie genre!</option>
-            <option value="comedy" id="35">Comedy</option>
-            <option value="horror" id="27">Horror</option>
-            <option value="romance" id="10749">Romance</option>
-            <option value="action" id="28">Action</option>
-            <option value="sci_fi" id="878">Sci-fi</option>
+            <option value="35" id="35">Comedy</option>
+            <option value="27" id="27">Horror</option>
+            <option value="10749" id="10749">Romance</option>
+            <option value="28" id="28">Action</option>
+            <option value="878" id="878">Sci-fi</option>
           </select>
-                <button class="btn btn-outline-danger mx-2" id="submitButton" type="submit">
-            Search
-          </button>
             </form>
         </div>
     </nav>
@@ -40,7 +37,7 @@
             <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
         </section>
         <!-- card 1 -->
-        <section id="cardholder" class="row justify-content-center gap-3">
+        <section id="cardholder" class="row justify-content-center gap-3 row-cols-1 row-cols-md-3 g-4">
             <!-- <div class="card justify-content-center" style="min-height: 285px; width: 575px">
                 <div class="row g-0">
                     <div class="col-md-4">
