--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <title>Team Project 1</title>
+    <title>Moive Picker</title>
   </head>
 
   <body>
