cleaned up the modal

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
       >
         <div class="modal-dialog modal-xl">
           <div class="modal-content bg-dark">
-            <div class="modal-header ">
-              <h5 class="modal-title text-white" id="exampleModalLabel">Movie Trailer</h5>
+            <div class="modal-body d-flex justify-content-end">
               <button
                 type="button"
                 class="btn-close btn-close-white"
